feat: Refactor ChallengeServiceImpl to use sanitized data retrieval and improve challenge creation logic